--- a/views/search.pug
+++ b/views/search.pug
@@ -5,9 +5,12 @@ block content
     .search__header
         h3 Searching for #{searchingBy}
     .search__vidoes
+        if videos.length === 0
+            h5 No videos Found
         each item in videos
             +videoBlock({
             title : item.title,
             views : item.views,
-            videoFile : item.videoFile
+            videoFile : item.videoFile,
+            id : item.id
         })
