--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,11 +1,13 @@
 extends layouts/main
 
 block content
-    .form__container
-        form(action=routes.editProfile, method ="post")
-            label(for="avatar") Avatar
-            input(type="file", id="avatar", name="avatar")
+    .form-container
+        form(action=`/users${routes.editProfile}`, method ="post")
+            .fileUpload
+                label(for="avatar") Avatar
+                input(type="file", id="avatar", name="avatar")
             input(type="text", placeholder="Name", name="name")
             input(type="email",placeholder="email", name="email")
             input(type="submit",value="Update Profile")
-        a.form-container__line(href=`/users${routes.changePassword}`) Change Password
+        a.form-container__line(href=`/users${routes.changePassword}`) 
+         button Change Password
