--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,9 +1,9 @@
 .social-login
-    button.social-login__github
+    button.social-login--github
         span 
             i.fab.fa-github
         |Continue With Github
-    button.socil-login__facebook
+    button.social-login--facebook
         span 
             i.fab.fa-facebook
         |Continue With Facebook
