--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,10 +1,11 @@
 extends layouts/main
 
 block content
-    .form__container
+    .form-container
         form(action=`/videos${routes.upload}`, method ="post",enctype="multipart/form-data")
-            label(type="file") Video File
-            input(type="file", id="file", name="videoFile",required=true, accept="video/*") 
+            div.fileUpload
+                label(type="file") Video File
+                input(type="file", id="file", name="videoFile",required=true, accept="video/*") 
             input(type="text", placeholder="Title", name="title", required=true)
-            input(type="text",placeholder="Description", name="description", required=true)
+            textarea(placeholder="Description", name="description", required=true)
             input(type="submit",value="Upload Video")
