--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,7 +8,7 @@ header.header
                 input(type="text",placeholder="Search by term...",name="term")
         .header__column
             ul
-                if !user.isAuthenticated
+                if !user
                     li
                         a(href=routes.join) Join
                     li
@@ -20,4 +20,3 @@ header.header
                         a(href=routes.userDetail(user.id)) User Profile
                     li
                         a(href=routes.logout) Log Out
-                        
