--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -6,8 +6,8 @@ block content
             .fileUpload
                 label(for="avatar") Avatar
                 input(type="file", id="avatar", name="avatar")
-            input(type="text", placeholder="Name", name="name")
-            input(type="email",placeholder="email", name="email")
+            input(type="text", placeholder="Name", name="name",value=user.name)
+            input(type="email",placeholder="email", name="email",value=user.email)
             input(type="submit",value="Update Profile")
         a.form-container__line(href=`/users${routes.changePassword}`) 
          button Change Password
