--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,9 +1,10 @@
 .social-login
     button.social-login--github
-        span 
-            i.fab.fa-github
-        |Continue With Github
+        a(href=routes.github)
+            span
+                i.fab.fa-github
+            |Continue with Github 
     button.social-login--facebook
         span 
             i.fab.fa-facebook
-        |Continue With Facebook
+            |Continue With Facebook
