--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -1,24 +1,36 @@
 
-
-
 .video-detail__container {
     display: block;
     flex-direction: column;
     align-items: center;
+    max-width: 320;
+    height : 240;
+
+    .video__player{
+      max-width: 320;
+      height: 240;
+      margin-bottom: 20px;
+    }
     
     .video__info {
-      width: 100%;
+      width: 50%;
       max-width: 850px;
       margin-top: 25px;
+      margin-bottom: 10px;
+      align-items: center;
       button {
         width: 100px;
+        height: 100px;
         margin-bottom: 25px;
+        margin-top: 25px;
+        margin-right: 25px;
       }
       .video__title,
       .video__views,
       .video__description {
         display: block;
         margin-bottom: 15px;
+        margin-top : 5px;
       }
       .video__title {
         font-size: 22px;
