--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -4,6 +4,7 @@
     align-items: center;
     width: 100%;
     button {
+      color: white;
       width: 100%;
       max-width: 320px;
       display: flex;
@@ -17,10 +18,16 @@
         font-size: 20px;
       }
     }
-    .social-login--github {
+    
+    .social-login--github,:link{
       background-color: $black;
       color: white;
+      text-decoration: none;
+
     }
+    
+
+
     .social-login--facebook {
       background-color: #3a5998;
       color: white;
