--- a/static/styles.css
+++ b/static/styles.css
@@ -56,7 +56,7 @@ input[type=submit] {
 }
 
 .header {
-  background-color: #ea232c;
+  background-color: #ff7a00;
   margin-bottom: 50px;
 }
 .header .header__wrapper {
@@ -68,9 +68,15 @@ input[type=submit] {
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
 }
-.header .header__wrapper .header__column i {
+.header .header__wrapper :visited {
   color: white;
-  font-size: 40px;
+  text-decoration: none;
+}
+.header .header__wrapper .header__column rs i {
+  color: white;
+  font-size: 50px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 .header .header__wrapper .header__column:nth-child(2) {
   width: 100%;
@@ -83,10 +89,14 @@ input[type=submit] {
   display: flex;
   color: white;
   font-weight: 600;
+  font-size: 14px;
   text-transform: uppercase;
 }
+.header .header__wrapper .header__column ul :visited {
+  text-decoration: none;
+}
 .header .header__wrapper .header__column ul li:not(:last-child) {
-  margin-right: 15px;
+  margin-right: 30px;
 }
 .header .header__wrapper .header__column form {
   width: 100%;
@@ -172,6 +182,7 @@ input[type=submit] {
   width: 100%;
 }
 .social-login button {
+  color: white;
   width: 100%;
   max-width: 320px;
   display: flex;
@@ -185,9 +196,10 @@ input[type=submit] {
   margin-right: 10px;
   font-size: 20px;
 }
-.social-login .social-login--github {
+.social-login .social-login--github, .social-login :link {
   background-color: #444444;
   color: white;
+  text-decoration: none;
 }
 .social-login .social-login--facebook {
   background-color: #3a5998;
@@ -223,21 +235,34 @@ input[type=submit] {
   display: block;
   flex-direction: column;
   align-items: center;
+  max-width: 320;
+  height: 240;
+}
+.video-detail__container .video__player {
+  max-width: 320;
+  height: 240;
+  margin-bottom: 20px;
 }
 .video-detail__container .video__info {
-  width: 100%;
+  width: 50%;
   max-width: 850px;
   margin-top: 25px;
+  margin-bottom: 10px;
+  align-items: center;
 }
 .video-detail__container .video__info button {
   width: 100px;
+  height: 100px;
   margin-bottom: 25px;
+  margin-top: 25px;
+  margin-right: 25px;
 }
 .video-detail__container .video__info .video__title,
 .video-detail__container .video__info .video__views,
 .video-detail__container .video__info .video__description {
   display: block;
   margin-bottom: 15px;
+  margin-top: 5px;
 }
 .video-detail__container .video__info .video__title {
   font-size: 22px;
@@ -254,4 +279,31 @@ input[type=submit] {
 }
 .video-detail__container .video__comments .video__comment-number {
   font-size: 18px;
+}
+
+.user-profile {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.user-profile .user-profile__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 18px;
+  margin-bottom: 50px;
+}
+.user-profile .user-profile__header .profile__username {
+  font-size: 18px;
+  margin-top: 15px;
+}
+.user-profile .user-profile__btns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.user-profile .user-profile__btns a:not(:last-child) {
+  margin-bottom: 20px;
 }
