--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -2,7 +2,7 @@ header.header
     .header__wrapper
         .header__column
             a(href=routes.home)
-                i.fab.fa-youtube
+                i.fab.fa-youtube GIVE TUBE
         .header__column
             form(action=routes.search , method = "get")
                 input(type="text",placeholder="Search by term...",name="term")
