--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -7,6 +7,9 @@ block content
             .video__info
                 a(href=routes.editVideo(video.id))
                     button Edit video
+
+                a(href=routes.editVideo(video.id))
+                    button 도형 추출
                 h5.video__title=video.title
                 p.video__description=video.description
                 if video.views === 1
