--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -2,12 +2,13 @@ extends layouts/main
 
 block content
     .form-container
-        form(action=`/users${routes.editProfile}`, method ="post")
+        form(action=`${routes.editProfile(loggedUser.id)}`, method ="post",enctype="multipart/form-data")
             .fileUpload
                 label(for="avatar") Avatar
-                input(type="file", id="avatar", name="avatar")
-            input(type="text", placeholder="Name", name="name",value=user.name)
-            input(type="email",placeholder="email", name="email",value=user.email)
+                input(type="file", id="avatar", name="avatar",accept="image/*")
+            input(type="text", placeholder="Name", name="name",value=loggedUser.name)
+            input(type="email",placeholder="Email", name="email",value=loggedUser.email)
             input(type="submit",value="Update Profile")
-        a.form-container__line(href=`/users${routes.changePassword}`) 
-         button Change Password
+
+        a(href=`/users${routes.changePassword}`)
+                    button 🔐 Change Password
