--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,4 +9,4 @@
 
 @import "pages/home.scss";
 @import "pages/videoDetail.scss";
-@import "pages/userProfile.scss"
+@import "pages/userProfile.scss";
