--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,7 +8,7 @@ header.header
                 input(type="text",placeholder="Search by term...",name="term")
         .header__column
             ul
-                if !user
+                if !loggedUser
                     li
                         a(href=routes.join) Join
                     li
@@ -17,6 +17,6 @@ header.header
                     li
                         a(href=`/videos${routes.upload}`) Upload
                     li
-                        a(href=routes.userDetail(user.id)) User Profile
+                        a(href=`/users${routes.me}`) User Profile
                     li
                         a(href=routes.logout) Log Out
