--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,6 +1,15 @@
 extends layouts/main
 
 block content
-    a(href=routes.editProfile(user.id))
-        Edit User Info
-    p User Detail 
+    .user-profile
+        .user-profile__header
+            img.u-avatar(src=`/${user.avatarUrl}`)
+            h4.profile__username=user.name
+        if user.id === loggedUser.id
+            .user-profile_btns
+                a(href=`${routes.editProfile(user.id)}`)
+                    button ✏️ Edit Profile
+
+                a(href=`/users${routes.changePassword}`)
+                    button 🔐 Change Password
+                
