--- a/assets/scss/pages/userProfile.scss
+++ b/assets/scss/pages/userProfile.scss
@@ -13,6 +13,10 @@
         font-size: 18px;
         margin-top: 15px;
       }
+      .u-avatar{
+        width: 100px;
+        border-radius: 70%;
+      }
     }
     .user-profile__btns {
       display: flex;
