--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -42,6 +42,10 @@
       .video__description {
         font-size: 16px;
       }
+      .video__author {
+        font-size: 16px;
+        color: peru;
+      }
     }
     .video__comments {
       margin-top: 25px;
