--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,15 +1,28 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
     .user-profile
         .user-profile__header
-            img.u-avatar(src=`/${user.avatarUrl}`)
+            if user.avatarUrl===undefined
+                img.u-avatar(src=`${routes.defautlImage}`)
+
+            else
+                img.u-avatar(src=`/${user.avatarUrl}`)
             h4.profile__username=user.name
         if user.id === loggedUser.id
-            .user-profile_btns
+            .user-profile__btns
                 a(href=`${routes.editProfile(user.id)}`)
                     button ✏️ Edit Profile
 
                 a(href=`/users${routes.changePassword}`)
                     button 🔐 Change Password
-                
+   
+        .home-videos
+                each item in user.videos
+                    +videoBlock({
+                        id:item.id,
+                        title:item.title,
+                        views:item.views,
+                        videoFile:item.fileUrl
+                    })
