--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,16 +1,13 @@
 extends layouts/main
+include mixins/videoPlayer
 
 block content
     .video-detail__container
-            .video__player
-                video(src=`/${video.fileUrl}`)
+            +videoPlayer({src:video.fileUrl})
             .video__info
-                if video.creator.id === loggedUser.id
+                if loggedUser && video.creator.id === loggedUser.id
                     a(href=routes.editVideo(video.id))
                         button Edit video
-
-                    a(href=routes.editVideo(video.id))
-                        button 도형 추출
                 h5.video__title=video.title
                    
                 p.video__description=video.description
