--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -1,6 +1,6 @@
 $red: #ea232c;
 $sk-red : rgb(234,0,44);
-$sk-orange : rgb(255,122,0);
+$sk-orange : red;
 $dark-red: #bb2f2a;
 $grey: #f5f5f5;
 $black: #444444;
