--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -41,6 +41,8 @@ button {
   border: none;
   background-color: #3498db;
   color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 button.delete {
