--- a/static/styles.css
+++ b/static/styles.css
@@ -44,6 +44,8 @@ button {
   border: none;
   background-color: #3498db;
   color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 button.delete {
@@ -172,7 +174,6 @@ input[type=submit] {
 }
 .form-container .fileUpload label {
   font-weight: 300;
-  margin-right: 10px;
 }
 
 .social-login {
@@ -246,6 +247,32 @@ input[type=submit] {
 .videoPlayer .videoPlayer__controls .videoPlayer__column:first-child span:first-child {
   margin-right: 10px;
 }
+.videoPlayer .videoPlayer__controls .videoPlayer__volume {
+  position: absolute;
+  padding: 0;
+  opacity: 1;
+  top: -60px;
+  left: -25px;
+  transform: rotate(-90deg);
+  z-index: 10;
+  width: 80px;
+}
+.videoPlayer .videoPlayer__controls .videoPlayer__volume input {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.videoPlayer .videoPlayer__controls .videoPlayer__volume input::-webkit-slider-runnable-track {
+  background-color: #f5f5f5;
+  height: 5px;
+}
+.videoPlayer .videoPlayer__controls .videoPlayer__volume input::-webkit-slider-thumb {
+  all: unset;
+  background-color: #ea232c;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  position: relative;
+  top: -5px;
+}
 .videoPlayer .videoPlayer__controls .videoPlayer__column:last-child {
   justify-self: end;
 }
@@ -255,6 +282,16 @@ input[type=submit] {
 .videoPlayer .videoPlayer__controls i {
   font-size: 25px;
   cursor: pointer;
+}
+
+.record-container {
+  width: 100%;
+  max-width: 320px;
+  margin-bottom: 50px;
+  align-items: center;
+}
+.record-container video {
+  background-color: black;
 }
 
 .home-videos {
