--- a/views/upload.pug
+++ b/views/upload.pug
@@ -2,6 +2,10 @@ extends layouts/main
 
 block content
     .form-container
+        .record-container#jsRecordContainer
+            video#jsVideoPreview
+            button#jsRecordButton Record Video
+
         form(action=`/videos${routes.upload}`, method ="post",enctype="multipart/form-data")
             div.fileUpload
                 label(type="file") Video File
